01-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: "enable-underscores-in-headers"
