03-service.yml

apiVersion: v1
kind: Service
metadata:
  labels:
    workload.user.cattle.io/workloadselector: header-test
  name: header-test
  namespace: enable-underscores-in-headers
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    workload.user.cattle.io/workloadselector: header-test
